--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,4 +21,4 @@ jobs:
       - run:
           name: Run unit tests
           command: |
-            php ./vendor/bin/phpunit --stop-on-error --stop-on-failture
+            php ./vendor/bin/phpunit
