--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "isaeken/plugin-system",
-    "version": "1.3",
+    "version": "1.3.1",
     "type": "library",
     "description": "Plugin support and management library for your project",
     "keywords": ["plugin", "extension", "support", "management"],
@@ -20,7 +20,7 @@
         }
     },
     "require": {
-        "php": ">=7.4"
+        "php": "^7.4|^8.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^5.1",
