--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,14 @@
 {
     "name": "isaeken/plugin-system",
-    "version": "1.3.1",
+    "version": "1.3.2",
     "type": "library",
     "description": "Plugin support and management library for your project",
     "keywords": ["plugin", "extension", "support", "management"],
     "homepage": "https://www.isaeken.com.tr",
     "license": "MIT",
+    "prefer-stable": true,
+    "minimum-stability": "dev",
+    "readme": "README.md",
     "authors": [
         {
             "name": "isaeken",
@@ -14,9 +17,20 @@
             "role": "Founder"
         }
     ],
+    "config": {
+        "sort-packages": true
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
     "autoload": {
         "psr-4": {
             "IsaEken\\PluginSystem\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "IsaEken\\PluginSystem\\Tests\\": "tests"
         }
     },
     "require": {
