--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "isaeken/plugin-system",
-    "version": "1.5.0",
+    "version": "1.5.3",
     "type": "library",
     "description": "Plugin support and management library for your project",
     "keywords": ["plugin", "extension", "support", "management"],
@@ -19,6 +19,16 @@
     ],
     "config": {
         "sort-packages": true
+    },
+    "extra": {
+        "laravel": {
+            "provider": [
+                "IsaEken\\PluginSystem\\PluginSystemServiceProvider"
+            ],
+            "aliases": {
+                "PluginSystem": "IsaEken\\PluginSystem\\PluginSystemFacade"
+            }
+        }
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
