--- a/composer.json
+++ b/composer.json
@@ -44,12 +44,13 @@
         }
     },
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "composer/semver": "^3.2",
         "illuminate/support": "^8.48"
     },
     "require-dev": {
-        "symfony/var-dumper": "^5.1",
-        "phpunit/phpunit": "^9.4"
+        "laravel/pint": "^0.2.0",
+        "phpunit/phpunit": "^9.4",
+        "symfony/var-dumper": "^5.1"
     }
 }
