--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "isaeken/plugin-system",
-    "version": "1.6",
+    "version": "2.0",
     "type": "library",
     "description": "Plugin support and management library for your project",
     "keywords": ["plugin", "extension", "support", "management"],
@@ -46,7 +46,8 @@
     "require": {
         "php": "^8.1",
         "composer/semver": "^3.2",
-        "illuminate/support": "^8.48"
+        "illuminate/support": "^9",
+        "psr/log": "^3.0"
     },
     "require-dev": {
         "laravel/pint": "^0.2.0",
