--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,10 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "./vendor/bin/pest",
+        "post-autoload-dump": [
+            "@php ./vendor/bin/testbench package:discover --ansi"
+        ]
     },
     "autoload": {
         "psr-4": {
@@ -45,13 +48,15 @@
     },
     "require": {
         "php": "^8.1",
-        "composer/semver": "^3.2",
-        "illuminate/support": "^9",
+        "composer/semver": "^3.3.2",
+        "illuminate/support": "^v9.11.0",
         "psr/log": "^3.0"
     },
     "require-dev": {
         "laravel/pint": "^0.2.0",
+        "orchestra/testbench": "^7.5",
+        "pestphp/pest": "^1.21",
         "phpunit/phpunit": "^9.4",
-        "symfony/var-dumper": "^5.1"
+        "symfony/var-dumper": "^6.1"
     }
 }
